--- a/resume.html
+++ b/resume.html
@@ -57,9 +57,9 @@
 </div>
 <div id="research-experience" class="section level2" data-icon="laptop">
 <h2>Research Experience</h2>
-<div id="nus-research-scholar" class="section level3">
-<h3>NUS Research Scholar</h3>
-<p>(Currently) Biomedical Engineering, NUS</p>
+<div id="nus-research-scholar-currently" class="section level3">
+<h3>NUS Research Scholar (Currently)</h3>
+<p>Biomedical Engineering, NUS (Supervisor: Lih Feng CHEOW)</p>
 <p>Singapore</p>
 <p>2019-2023</p>
 <ul>
@@ -68,7 +68,7 @@
 </div>
 <div id="master-student" class="section level3">
 <h3>Master Student</h3>
-<p>Molecular Biology and Genetics, Bilkent University</p>
+<p>MBG, Bilkent University (Supervisor: Ozlen KONU)</p>
 <p>Ankara, Turkey</p>
 <p>2016 - 2019</p>
 <div id="tissue-specific-transcriptome-of-zebrafish-in-ache-mutant-embryos" class="section level4">
@@ -78,9 +78,9 @@
 </ul>
 </div>
 <div id="role-of-ache-as-a-tumor-suppressor-together-with-p53" class="section level4">
-<h4>Role of AChE as a tumor suppressor together with P53</h4>
+<h4>Role of AChE as a tumor suppressor together with p53</h4>
 <ul>
-<li>My role was to bred appropriate zebrafish lines dissect, genotype the fish tissues and embed them in OCT.</li>
+<li>My role was to bred appropriate zebrafish lines, dissect, genotype the fish tissues and embed them in OCT.</li>
 </ul>
 </div>
 <div id="identification-of-peridodontis-disease-related-genes-collaboration-wdentistry-department-of-ankara-university" class="section level4">
@@ -90,7 +90,7 @@
 </ul>
 </div>
 <div id="role-of-mineralocorticoid-receptor-in-breast-cancer" class="section level4">
-<h4>Role of Mineralocorticoid Receptor in Breast Cancer</h4>
+<h4>Role of mineralocorticoid receptor in breast cancer</h4>
 <ul>
 <li>My roles in the wet lab part were RNA isolation and qPCR; for the dry lab, development of easy to use pipeline with Seven Bridges CGC and available R packages for RNA-Seq data analysis, and data visualization.</li>
 </ul>
@@ -107,7 +107,7 @@
 </div>
 <div id="the-relationship-between-some-of-mesp-family-genes-and-other-known-somitogenesis-genes-in-zebrafish-vertebrae-development" class="section level3">
 <h3>The relationship between some of Mesp family genes and other known somitogenesis genes in zebrafish vertebrae development</h3>
-<p>Albert Einstein College of Medicine - Supersivor: Ertugrul Ozbudak</p>
+<p>Albert Einstein College of Medicine - Supersivor: Ertugrul OZBUDAK</p>
 <p>NY, USA</p>
 <p>2015 Summer</p>
 <ul>
@@ -156,8 +156,8 @@
 </div>
 <div id="education" class="section level2" data-icon="graduation-cap" data-concise="true">
 <h2>Education</h2>
-<div id="phd.-student-bomedical-engineering" class="section level3">
-<h3>PhD. Student, Bomedical Engineering</h3>
+<div id="phd-student-biomedical-engineering" class="section level3">
+<h3>PhD Student, Biomedical Engineering</h3>
 <p>National University of Singapore</p>
 <p>Singapore</p>
 <p>2019 - 2023</p>
@@ -165,27 +165,27 @@
 <li>I am currently working on two different projects regarding the single cell sequencing and its application on microfluidics systems.</li>
 </ul>
 </div>
-<div id="m.sc.in-molecular-biology-and-genetics" class="section level3">
-<h3>M.Sc.in Molecular Biology and Genetics</h3>
+<div id="m.sc.-molecular-biology-and-genetics" class="section level3">
+<h3>M.Sc., Molecular Biology and Genetics</h3>
 <p>Bilkent University</p>
 <p>Ankara, Turkey</p>
 <p>2017 - 2019</p>
 <p>Thesis: Tissue Specific Transcriptome of Zebrafish in AChE Mutant Embryos</p>
 </div>
-<div id="b.sc.-in-molecular-biology-and-genetics" class="section level3">
-<h3>B.Sc. in Molecular Biology and Genetics</h3>
+<div id="b.sc.-molecular-biology-and-genetics" class="section level3">
+<h3>B.Sc., Molecular Biology and Genetics</h3>
 <p>Bilkent University</p>
 <p>Ankara, Turkey</p>
 <p>2012 - 2016</p>
 </div>
-<div id="english-preperation-school" class="section level3">
-<h3>English Preperation School</h3>
+<div id="english-preparation-school" class="section level3">
+<h3>English Preparation School</h3>
 <p>Bilkent University</p>
 <p>Ankara, Turkey</p>
 <p>2012</p>
 </div>
-<div id="math-and-science" class="section level3">
-<h3>Math and Science</h3>
+<div id="mathematics-and-science" class="section level3">
+<h3>Mathematics and Science</h3>
 <p>Sami Yangin Anatolian High School</p>
 <p>Kayseri, Turkey</p>
 <p>2011</p>
@@ -244,9 +244,10 @@
 <ul>
 <li>Sports: Playing Basketball and Volleyball</li>
 <li>Art and Music: Charcoal, Reed Flute(Beginner)</li>
-<li>Games: Chess, Checker, Mind games such as Sudoku, Futoshiki, and so on.</li>
-<li>Computer related Angular JS, Machine Learning, Git, C++ via SoloLearn</li>
-<li>Other: Statistics shared by Conrad Hacketts, World Economic Forum, Economics and Forbes Magazine</li>
+<li>Games: Chess, Checker, Mind games such as Sudoku, Kendoku, Futoshiki.</li>
+<li>Computer related: HTML Fundamentals, CSS Fundamentals, JavaScript Tutorial, PHP Tutorial, SQL Fundamentals, Python 3
+Tutorial, C# Tutorial, Ruby Tutorial, Swift 4 Tutorial courses, certificated by SoloLearn</li>
+<li>Other: Data science, statistics shared by Conrad Hacketts, World Economic Forum, Economics and Forbes Magazine.</li>
 </ul>
 </div>
 </div>
